# swarm_demo

./: .gitignore  .gitmodules  README.md  package.xml  setup.cfg  setup.py
config/: bridge_config.yaml
launch/: swarm_demo.launch.py
models/simple_quad/: model.sdf
swarm_demo/: drone_controller.py  master_node.py  swarm_manager.py
swift_pico/: CMakeLists.txt  package.xml
swift_pico/src/: pico_client.cpp  pico_controller_PID.cpp  pico_server.cpp  waypoint_service.cpp
waypoint_navigation/: CMakeLists.txt  package.xml
waypoint_navigation/action/: NavToWaypoint.action
waypoint_navigation/srv/: GetWaypoints.srv
worlds/: swarm_world.sdf
